--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
   port: 8081
 
 spring:
+  data:
+    mongodb:
+      uri: mongodb://admin:123456@remotehost:27017/admin
   datasource:
     master:
       url: jdbc:mysql://127.0.0.1:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
