--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
 
 #配置Mybatis
 mybatis:
-  type-aliases-package: org.wbw.example.entity
+  type-aliases-package: com.wbw.demo.entity
   mapper-locations: classpath:mapper/*.xml
   configuration:
     # 开启驼峰命名转换，如：Table(create_time) -> Entity(createTime)。不需要我们关心怎么进行字段匹配，mybatis会自动识别`大写字母与下划线`
