--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -32,8 +32,9 @@ mybatis:
   configuration:
     # 开启驼峰命名转换，如：Table(create_time) -> Entity(createTime)。不需要我们关心怎么进行字段匹配，mybatis会自动识别`大写字母与下划线`
     map-underscore-to-camel-case: true
-
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 #打印SQL日志
 logging:
+  config: classpath:logback-spring.xml
   level:
-    com.wbw.demo.dao: DEBUG
+    com.wbw.demo.dao: debug
